# std-thread_vs_openmp

./: .gitmodules  CMakeLists.txt  Makefile  Notes  README.md  STREAM.cc  STREAM_capture_test.cc  default.inc  mmul.cc  scale.cc  scale_n8_steelhead.out  stream.sh  streamLFTP.cc  streamLFTPntasks.cc  streamLFTPx8.cc  streamOMP.cc  streamTP.cc  streamTP11.cc  streamTP11ntasks.cc  streamTP11x2.cc  stream_seperate.sh  streamntasks.sh
benchmarks/MatrixMultiply/: mmul.cc
benchmarks/STREAM/: threadpool11.cc  threadpool11_xN.cc  threadpool_x8.cc
include/: tp11helper.hh
src/: dummy.cc
